# Jarvis-2.0

./: .gitignore  README.md  TODO.md  build.gradle.kts  github_issue_logging_todo.md  gradle.properties  settings.gradle.kts  todo.md
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  whisper_jni.cpp
app/src/main/java/com/jarvis/githubissues/: GitHubIssueLogger.kt
app/src/main/java/com/jarvis/githubissues/api/: GitHubApiClient.kt  IssueBodyBuilder.kt  IssueTitleFormatter.kt
app/src/main/java/com/jarvis/githubissues/dedupe/: IssueDeduplicator.kt  PersistedDedupeStore.kt
app/src/main/java/com/jarvis/githubissues/detect/: UserCorrectionDetector.kt
app/src/main/java/com/jarvis/githubissues/integration/: ActionExecutorHook.kt  OpenClawHook.kt  OpenClawSessionBridge.kt  RoutingHook.kt  StateMachineHook.kt  VoicePipelineHook.kt
app/src/main/java/com/jarvis/githubissues/model/: IssueContext.kt  IssueDraft.kt  IssueEvent.kt
app/src/main/kotlin/ai/openclaw/jarvis/: JarvisApp.kt  MainActivity.kt
app/src/main/kotlin/ai/openclaw/jarvis/di/: AppModule.kt
app/src/main/res/drawable/: ic_launcher_foreground.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
app/src/main/res/xml/: file_paths.xml  screen_awareness_service_config.xml
app/src/test/java/com/jarvis/githubissues/: GitHubIssueLoggerTest.kt  IssueDeduplicatorTest.kt  IssueTitleFormatterTest.kt  RedactorTest.kt
docs/: android-hardening-report.md  manual-test-plan.md  ui-implementation-report.md
gradle/: libs.versions.toml
(+281 files in other folders)
